# PIA_MetaHunter

./: README.md  estructura_inicial  pyproject.toml  requirements.txt  setup.ps1
data/clean/: reporte_corporativo.docx
data/raw/: nota.txt  nota_sensible.txt  reporte.docx
docs/: README_entregable_3.md  ai_plan.md  declaracion_etica.md  entregable_2.md  entregable_3.md  entregable_4.md  reporte_final.md
examples/: ai_summary_20251120T224835Z.json  ai_summary_20251120T225112Z.json  ai_summary_20251120T230739Z.json  ai_summary_20251120T230756Z.json  ai_summary_20251120T231035Z.json  ai_summary_20251120T231832Z.json  ai_summary_20251120T235227Z.json  ai_summary_ai.json  ai_summary_example.json  ai_summary_viejo.json  logs.jsonl  logs_ai.json  logs_full.json  logs_full_ai.json  stats.json  stats_advanced.json  stats_test.json
prompts/: prompt_v1.json
proposals/: DeclaracionEticayLegal.md  propuesta.md
reports/: ai_report.md  ai_report_20251120T231832Z.md  ai_report_20251120T235227Z.md  ai_report_ai.md  integrity_full.json  integrity_test.json  reports.txt
scripts/: run_pipeline.ps1
src/metahunter/: __main__.py  advanced.py  ai_client.py  analyzer.py  cleaner.py  cli.py  integrity.py  reporter.py  scanner.ps1
src/metahunter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: analizador.py  test_cleaner.py
