[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metahunter"
version = "0.1.0"
description = "MetaHunter - escáner y limpiador inteligente de metadatos multiplataforma"
authors = [
    { name = "Fer Garza", email = "fer@example.com" },
    { name = "Equipo PIA_MetaHunter", email = "equipo@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
    # Tipos
    "typing-extensions",

    # Documentos (Office / PDF)
    "python-docx>=0.8.11",
    "PyPDF2>=3.0.1",
    "pdfminer.six>=20221105",
    "reportlab>=4.0.7",

    # Imágenes y metadatos
    "pillow>=10.0.0",
    "piexif>=1.1.3",
    "hachoir>=3.2.0",
    "exif>=1.6.0",

    # Utilidades CLI
    "tqdm>=4.66.1",
    "rich>=13.7.0",
    "colorama>=0.4.6",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.2",
    "flake8>=6.1.0",
    "black>=24.4.0",
]

[project.scripts]
metahunter = "metahunter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.flake8]
max-line-length = 88
ignore = ["E203", "W503"]
